cicd/dmf_k8/mockserver-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mockserver
  template:
    metadata:
      labels:
        component: mockserver
    spec:
      containers:
        - name: server
          image: strapi/strapi
          ports:
            - containerPort: 1337
