cicd/dmf_k8/mockserver-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mockserver-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mockserver
  ports:
    - port: 1337
      targetPort: 1337
